@@ -14,6 +14,7 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -29,19 +30,14 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         
-        // ✅ 모든 Vercel 도메인 허용 (패턴 매칭)
-        configuration.setAllowedOriginPatterns(Arrays.asList(
-            "http://localhost:*",
-            "http://127.0.0.1:*",
-            "https://*.vercel.app",
-            "https://writeflow-ten.vercel.app"
-        ));
+        // ✅ 모든 origin 허용 (Nginx에서 제어하므로)
+        configuration.setAllowedOriginPatterns(List.of("*"));
         
         configuration.setAllowedMethods(Arrays.asList(
             "GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"
         ));
         
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setExposedHeaders(Arrays.asList(
             "Authorization", 
             "Content-Type",
@@ -65,6 +61,7 @@ public class SecurityConfig {
                 sm.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authorizeHttpRequests(auth -> auth
+                // ✅ Swagger 및 헬스체크
                 .requestMatchers(
                     "/v3/api-docs/**",
                     "/swagger-ui/**",
@@ -73,9 +70,19 @@ public class SecurityConfig {
                     "/actuator/health", 
                     "/actuator/info"
                 ).permitAll()
-                .requestMatchers(HttpMethod.GET, "/").permitAll()
+                
+                // ✅ OPTIONS 요청 허용 (CORS preflight)
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                .requestMatchers("/posts/**").authenticated()
+                
+                // ✅ GET 요청은 인증 없이 허용 (글 목록 조회)
+                .requestMatchers(HttpMethod.GET, "/**").permitAll()
+                
+                // ✅ POST, PUT, DELETE는 인증 필요
+                .requestMatchers(HttpMethod.POST, "/posts/**").authenticated()
+                .requestMatchers(HttpMethod.PUT, "/posts/**").authenticated()
+                .requestMatchers(HttpMethod.DELETE, "/posts/**").authenticated()
+                
+                // ✅ 나머지는 허용
                 .anyRequest().permitAll()
             );
 
